--- a/app/src/main/res/layout/row_series.xml
+++ b/app/src/main/res/layout/row_series.xml
@@ -30,20 +30,23 @@
                     app:srcCompat="@drawable/link_black"/>
 
                 <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/results"
-                    android:layout_width="wrap_content" android:layout_marginTop="5dp"
+                    android:id="@+id/series_results"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:scaleX="-1"
                     android:tint="@color/arrowsTint"
-                    android:visibility="@{data.hasUrl ? View.VISIBLE : View.GONE}"
+                    android:visibility="@{data.hasResultsUrl ? View.VISIBLE : View.GONE}"
                     app:srcCompat="@drawable/podium"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
