--- a/app/src/main/res/layout/row_series.xml
+++ b/app/src/main/res/layout/row_series.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/series_results"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="12dp"
                     android:scaleX="-1"
                     android:tint="@color/arrowsTint"
                     android:visibility="@{data.hasResultsUrl ? View.VISIBLE : View.GONE}"
@@ -43,10 +43,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="12dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
@@ -62,7 +62,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/seriesIsOver"
                     android:textColor="#333"
-                    android:visibility="@{data.percentageCompleted >= 100 ? View.VISIBLE : View.GONE}"/>
+                    android:visibility="@{data.percentageCompleted >= 100 ? View.VISIBLE : View.GONE}"
+                    tools:visibility="gone"/>
 
                 <LinearLayout
                     android:id="@+id/seriesState"
