--- a/app/src/main/res/layout/row_series.xml
+++ b/app/src/main/res/layout/row_series.xml
@@ -10,11 +10,17 @@
             type="com.pedrojtmartins.racingcalendar.models.Series"/>
 
         <import type="android.view.View"/>
+
+        <import type="com.pedrojtmartins.racingcalendar.adapters.recyclerViews.SeriesAdapter.BindingAdapters"/>
+
     </data>
 
     <LinearLayout style="@style/SeriesRowParent">
 
-        <LinearLayout style="@style/SeriesRow">
+        <LinearLayout
+            style="@style/SeriesRow"
+            app:seriesBackground="@{data.percentageCompleted}"
+            tools:background="#f2f2f2">
 
             <LinearLayout
                 android:layout_width="wrap_content"
