--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,6 +97,16 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="SeriesRacesTitle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:lines">1</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">#333</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <!--SomethingMissing-->
     <style name="SomethingMissing">
         <item name="android:layout_width">match_parent</item>
