--- a/app/src/main/res/layout/row_race2.xml
+++ b/app/src/main/res/layout/row_race2.xml
@@ -49,7 +49,8 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:padding="8dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                tools:visibility="visible">
 
                 <TextView
                     android:layout_width="0dp"
