--- a/app/src/main/res/layout/row_race2.xml
+++ b/app/src/main/res/layout/row_race2.xml
@@ -20,20 +20,41 @@
         android:orientation="vertical"
         tools:background="#f2f2f2">
 
-        <TextView
-            android:id="@+id/weekTitle"
+        <LinearLayout
+            android:id="@+id/weekHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingTop="16dp"
-            android:textColor="#fff"
-            android:textSize="16sp"
+            android:orientation="horizontal"
             android:visibility="gone"
-            tools:background="#3c3c3c"
-            tools:text="Dec 04 - 10"
-            tools:visibility="visible"/>
+            tools:visibility="visible">
+
+            <TextView
+                android:id="@+id/weekRemaining"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingBottom="16dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="16dp"
+                android:textColor="#fff"
+                android:textSize="16sp"
+                tools:background="#3c3c3c"
+                tools:text="In 3 weeks"/>
+
+            <TextView
+                android:id="@+id/weekTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="16dp"
+                android:textColor="#fff"
+                android:textSize="16sp"
+                tools:background="#3c3c3c"
+                tools:text="Dec 04 - 10"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
