--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -186,6 +186,13 @@
         <item name="android:orientation">horizontal</item>
     </style>
 
+    <style name="RaceRowWeekHeader">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:tint">#A0A0A0</item>
+    </style>
+
     <!--Race Results Header-->
     <style name="ResultsRaceHeaderPositionCol">
         <item name="android:layout_width">0dp</item>
