--- a/app/src/main/res/layout/row_series.xml
+++ b/app/src/main/res/layout/row_series.xml
@@ -62,14 +62,29 @@
                     android:text="@{data.name}"
                     tools:text="F1 - Formula 1"/>
 
-                <TextView
-                    android:id="@+id/seriesCompleted"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/seriesIsOver"
-                    android:textColor="#333"
+                    android:orientation="horizontal"
                     android:visibility="@{data.percentageCompleted >= 100 ? View.VISIBLE : View.GONE}"
-                    tools:visibility="gone"/>
+                    tools:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/seriesYear"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:text="@{data.SYear}"
+                        android:textColor="#333"/>
+
+                    <TextView
+                        android:id="@+id/seriesCompleted"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/seriesIsOver"
+                        android:textColor="#333"/>
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/seriesState"
